syntax = "proto3";

package secret;

option go_package = "github.com/aligang/Gophkeeper/internal/common/secret";


enum SecretType {
  UNSPECIFIED = 0;
  TEXT = 1;
  LOGIN_PASSWORD = 2;
  CREDIT_CARD = 3;
  FILE = 4;
}


message SecretDescription {
  string id = 1;
  string createdAt = 2;
  string modifiedAt = 3;
  SecretType secret_type = 4;
}


message Secret {
  string id = 1;
  string createdAt = 2;
  string modifiedAt = 3;
  string accountID = 4;
  oneof secret {
    PlainText plain_text = 11;
    LoginPassword login_password = 12;
    CreditCard credit_card = 13;
    File file = 14;
  }
}


message PlainText {
  string data = 1;
}


message LoginPassword {
  string login = 1;
  string password = 2;
}


message CreditCard {
  string number = 1;
  string cardholder_name = 2;
  string valid_till = 3;
  string cvc = 4;
}

message File {
  bytes data = 1;
}